# depth-cam-adv

./: .gitignore  .gitmodules  note.md  readme.md
docs/: depth-map-module-spec.docx  report-personal.docx
docs(KR)/reports/: Documentation.docx  depth-map-module-spec-diagram-hardware.drawio  depth-map-module-spec-diagram-system.drawio  hardware-diagram.drawio  specification.docx
projects/depscan-firmware-rtos/: .clang-format  .cproject  .gdbinit  .gdblaunch  .gitignore  .mxproject  .project  CppProperties.json  Debug_STM32F401VC_FLASH.ld  Doxyfile  Makefile  STM32F401VCTx_FLASH.ld  depscan-firmware-rtos-g431kb.ioc  depscan-firmware-rtos.ioc  make.sh  openocd.cfg
projects/depscan-firmware-rtos-g431kb/: .mxproject  Makefile  depth-firmware-v2.ioc
projects/depscan-firmware-rtos-g431kb/Inc/: main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
projects/depscan-firmware-rtos-g431kb/Src/: main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
projects/depscan-firmware-rtos/.dbgpkg/: .gdb.bat  .gdbcmd  .gdbscript  .launch.bat  .launch.halt.bat  .launch.vbs  .openocd.bat  .program.bat
projects/depscan-firmware-rtos/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  usbd_cdc_if.h
projects/depscan-firmware-rtos/Src/: app_freertos.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  stm32g4xx_hal_msp.c  stm32g4xx_hal_timebase_tim.c  stm32g4xx_it.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
projects/depscan-firmware-rtos/Src-Usr/: app-capture.cpp  app-conn.cpp  app-proc.cpp  app.cpp  app.h  capture.h  defs.h  doxygen-main-page.h  logger.cpp  protocol-s.h  protocol.h  rw.h
projects/depscan-firmware-rtos/Src-Usr/app/: app-capture.cpp  app-conn.cpp  app-test.cpp  app.cpp  app.h  capture.h  dist-sensor.h  hal.h  internal-capture.h  motor.h  rw.h
projects/depscan-firmware-rtos/Src-Usr/arch/: hw.c  hw.h  hwtim.cpp  rw.c  s2pi.h  usb-rw.cpp
projects/depscan-firmware-rtos/Src-Usr/platform/: hw.c  hwtim.cpp  mem.h  motor.cpp  s2pi.h  usb-rw.cpp
projects/depscan-firmware-rtos/Src-Usr/protocol/: protocol-s.h  protocol.h
projects/depscan-firmware-rtos/Src/Usr/: app-main.cpp  app.h  defs.h  rw.h
projects/depscan-firmware-v2/: -march=armv7-m  .gitignore  .mxproject  Makefile  README.md  depth-firmware-v2.ioc
projects/depscan-firmware-v2/Inc/: main.h  stm32g4xx_it.h
projects/depscan-firmware-v2/Src/: main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  usbd_conf.c  usbd_desc.c
projects/depscan-firmware-v2/toolchain/: arm-none-eabi.cmake
projects/scanlib_host_app/: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json
projects/scanlib_host_app/src/imseg/: entry.cpp
projects/scanlib_host_app/src/scangui/: app.cpp  app.hpp  console-app.cpp  console-app.hpp  gui-app.cpp  gui-app.hpp  linux.cpp  win32.cpp
projects/scanlib_host_app/src/scanlib/arch/: utility.hpp
projects/scanlib_host_app/src/scanlib/arch/win32/: api-win32.cpp  com.cpp  com.hpp
projects/scanlib_host_app/src/scanlib/common/: protocol.h  scanner_protocol.h  transceiver_utility.hpp  utility.hxx
projects/scanlib_host_app/src/scanlib/core/: communication_handler.cpp  communication_handler.hpp  scanner_protocol_handler.cpp  scanner_protocol_handler.hpp  scanner_utils.h
projects/scanlib_host_app/tests/: testmain.cpp
projects/tof-depth-map-gen-old/: .build.bat  .clang-format  .gdbcmd  .mxproject  CppProperties.json  Makefile  STM32F401VCTx_FLASH.ld  tof-depth-map-gen-revision.elf(1).launch  tof-depth-map-gen-revision.ioc
projects/tof-depth-map-gen-old/.dbgpkg/: .gdb.bat  .launch.bat  .launch.halt.bat  .openocd.bat
projects/tof-depth-map-gen-old/Inc/: main.h  stm32f4xx_hal_conf.h  usb_device.h
projects/tof-depth-map-gen-old/Src/: main.c  stm32f4xx_it.c  syscalls.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
projects/tof-depth-map-gen-old/Src/app/: motor.h  program-test.c  program.h  scanner_protocol.h  time.h
projects/tof-depth-map-gen-old/Src/arch/: hw-timer.c  hw-timer.h  irq.h  s2pi-1-gpio.c  transciever-usb.c
projects/tof-depth-map-gen-revision/: .cproject  .cproject.bak  .mxproject  .project  .project.bak  Doxyfile  Makefile  TODO.md  tof-depth-map-gen-revision.elf.launch  tof-depth-map-gen-revision.ioc
projects/tof-depth-map-gen-revision/Inc/: intellisense.h  stm32f4xx_it.h  usbd_cdc_if.h
projects/tof-depth-map-gen-revision/Src/: macro.h  stm32f4xx_hal_msp.c  usbd_conf.c  usbd_desc.c
projects/tof-depth-map-gen-revision/Src/app/: motor.c  program-capture.c  program.c  protocol.h
resource/diagrams/: idea-diagrams.drawio
samples/: 2020-5-6-17-8-32.dpta
schematics/: .gitignore
schematics/ARCHIVE/MEASURE_IF-v1.0.1/: MEASURE_IF.kicad_pcb  MEASURE_IF.kicad_pcb-bak  MEASURE_IF.pro  MEASURE_IF.sch  MEASURE_IF.sch-bak  MEASURE_IF.xml  fp-info-cache
schematics/MEASURE_IF/: MEASURE_IF  MEASURE_IF-cache.lib  MEASURE_IF.csv  MEASURE_IF.kicad_pcb  MEASURE_IF.kicad_pcb-bak  MEASURE_IF.plt  MEASURE_IF.pro  MEASURE_IF.sch  MEASURE_IF.sch-bak  _autosave-MEASURE_IF.kicad_pcb  fp-info-cache
schematics/RPiCML_IF/: RPi-SODIMM-LNK.sch  RPi-SODIMM-LNK.sch-bak  RPiCML_IF-cache.lib  RPiCML_IF.sch
(+74 files in other folders)
